pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingFunctionAmendParameterListSeparator.pkl
f { arg1, arg2 arg3 ->
  x = arg1
  y = arg2
  z = arg3
}